feat: Tasks 1-5 complete — API removal, tab enforcement, Java8 compat, knockout scoring, UI redesign, @QNB.COM.EG enforcement
Task 1: Deleted all com.worldcup.api.* files and AdminSyncBean, removed Jackson/jjwt from pom, removed API fields from Match, Java 8 compiler target

Task 2: TabEnforcementFilter, session-conflict.xhtml, currentTabToken in AuthBean, tab token injected into every page via layout.xhtml JS

Task 3: All getResultStream() replaced with getResultList(), all switch expressions replaced with if/else, all isBlank() replaced, all toList() replaced with collect(Collectors.toList()), Map.ofEntries replaced with static HashMap, var replaced with explicit types

Task 4: Match.java gains extraTimeHomeScore/Away, penaltyHomeScore/Away, matchDecidedBy, isKnockoutMatch(); MatchService.forceUpdateResult overload; ScoringService ET/PEN rules; admin-matches.xhtml knockout inputs

Task 5: Full 365Score-inspired CSS redesign with light/dark CSS variables, theme toggle cookie, new header layout, match cards

Auth: @QNB.COM.EG domain enforcement in AuthenticationService and MockAuthenticationProvider (case-insensitive)

Fixed: JwtTokenService deleted (jjwt removed), ScoringService int dereference, DashboardBean var, LeaderboardBean switch, AdminAuditBean switch